# personal-monorepo

./: .gitignore  .sops.yaml  .swp  README.md  ]  backlog.md  flake.nix  ideas.md  piano.md  pyproject.toml  reading.md  recurring-payments.md  recurring-payments.nix  result  saronic.md  secrets.tar.gz.enc  shopping.md  test  todos.md  wezterm.lua
finances/: expense_analyzer.py  pyproject.toml
nix/: container.nix  darwin.nix  default.nix  home.nix  keys.nix  overlays.nix  packages.nix  shells.nix
nix/common/: aarch64-darwin.nix  default.nix  x86_64-linux.nix
nix/darwin-configurations/: darwin.nix  default.nix
nix/hardware/: default.nix  lambda-configuration.nix  lambda-hardware-configuration.nix  ml-pc-configuration.nix  nix-pi.nix  raspberry-pi.nix
nix/hardware/lambda/: configuration.nix  hardware-configuration.nix
nix/hardware/ml-pc/: configuration.nix  disko-config.nix  hardware-configuration.nix
nix/home-manager/: home.nix  rust-overlay-home.nix  wezterm.nix
nix/lib/: home.nix  keys.nix  nvidia-drivers.nix
nix/modules/: darwin-air.nix  darwin-saronic-air.nix  darwin-saronic.nix  darwin.nix  git-server.nix  git-shared-server.nix  home.nix  nginx-reverse-proxy.nix  personal-services.nix  remind-timer.nix  saronic-builders.nix  tailscaled.nix  telegram-webhook-server.nix
nix/nixos-configurations/: default.nix
nix/nixos-configurations/ml-pc/: configuration.nix  default.nix  hardware-configuration.nix
nix/nixos-configurations/saronic-system76/: configuration.nix  default.nix  hardware-configuration.nix
nix/nixos-modules/: default.nix
nix/nixos-modules/aarch64-darwin/: system-packages.nix  users.nix
nix/nixos-modules/all-systems/: bluetooth.nix  default.nix  dockerd.nix  experimental-featurs.nix  git-server.nix  git-shared-server.nix  gnome.nix  home.nix  motd.nix  neovim-config.nix  nginx-reverse-proxy.nix  nix-ld.nix  openssh.nix  parallelism.nix  rust-overlay-module.nix  saronic-builders.nix  shell-configs.nix  system-packages.nix  tailscaled.nix  wezterm.nix  xrdp-gnome.nix
nix/nixos-modules/home-manager/: common.nix  default.nix  home.nix  rust-overlay-home.nix  saronic-awscli.nix  saronic-opk.nix  shell-configs.nix  wezterm.nix
nix/nixos-modules/x86_64-linux/: default.nix  system-packages.nix  users.nix
nix/templates/: default.nix
nix/templates/python/: flake.nix
nix/templates/python-cuda/: .gitignore  flake.nix
nix/templates/uv/: flake.nix
nix/x86/: ml-pc-configuration.nix
remind/: pyproject.toml
repo-utils/: commit-secret-file.sh  commit_file.py  default.nix  flake.nix  main.py  pyproject.toml
scripts/: decrypt-secrets.sh  encrypt-secrets.sh  sops-export
sms/: README.md  send_sms.py
src/remind/: remind.py
telegram/: '  README.md  all-systems.nix  default.nix  echo_remind.py  flake.nix  ledger3.html  lib.nix  pyproject.toml  register_webhook.py  remind.py  send_telegram.py  server.py  services.nix  unregister_webhook.py
telegram-webhook/: README.md  main.py  pyproject.toml  register-webhook.py
telegram-webhook/register-webhook/: __main__.py
utils/: decrypt-secrets.sh  flake.nix  network-decrypt.sh
