[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["remind"]
package-dir = {"" = "src"}

[project]
name = "personal-monorepo"
version = "0.1.0"

requires-python = ">= 3.10"

dependencies = [
  "python-telegram-bot==22.0",
  "aiohttp==3.11.16",
  "python-dateutil==2.9.0.post0",
]

[project.scripts]
remind = "remind.remind:main" 
