[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ["remind"]
package-dir = {"" = "."}

[project]
name = "remind"
version = "1.0.0"

requires-python = ">= 3.10"

dependencies = [
  "python-telegram-bot",
  "aiohttp",
  "python-dateutil",
]

[project.scripts]
remind = "main:main" 
