[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[project]
name = "telegram-webhook"
version = "1.0.0"

requires-python = ">= 3.10"

dependencies = [
  "python-telegram-bot",
  "aiohttp",
  "python-dateutil",
  "fastapi",
]

[project.scripts]
remind = "main:main" 
