[project]
name = "telegram-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "python-telegram-bot>=22.0",
    "uvicorn>=0.34.2",
]

[project.scripts]
remind = "main:main"
register-webhook = "main:register-webhook"
