[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[project]
name = "telegram-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.10",
    "python-telegram-bot>=22.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
telegram-webhook-server = "main:main"
register-webhook = "main:register_webhook_entrypoint"
