[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11",
    "boto3>=1.38.12",
    "fastapi>=0.115.10",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=22.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
server = "server:main"
remind = "remind:main"
register-webhook = "register_webhook:main"
unregister-webhook = "unregister_webhook:main"
